--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Overview",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && webpack",
+    "build": "rimraf dist && webpack --mode=production",
     "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
@@ -19,8 +19,7 @@
   },
   "homepage": "https://github.com/momofcats/web_project_4#readme",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "rimraf": "^3.0.2"
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -36,6 +35,7 @@
     "postcss-loader": "^3.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "rimraf": "^3.0.2"
   }
 }
